fixed spacing, added links to icons.

--- a/app/(pages)/_components/AlumniPageCard/AlumniPageCard.module.scss
+++ b/app/(pages)/_components/AlumniPageCard/AlumniPageCard.module.scss
@@ -23,7 +23,7 @@
   flex-shrink: 0;
   background: var(--white, #FAFAFA);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  align-items: center;
+  
 
 
   padding-left: 22px;
@@ -60,12 +60,17 @@
 }
 
 .textcontainer {
+  margin-top: -9px;
   height: 352px;
+  display: flex;
+  flex-direction: column;
 }
 
 .name {
   font-size: 1.5rem;
   font-weight: 700;
+  
+  
 }
 
 .role {
@@ -75,13 +80,19 @@
 .description {
   margin-top: 11px;
   width: 310px;
+  display: -webkit-box;
+  -webkit-line-clamp: 10;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .button {
+  
   display: flex;
   width: 110px;
   height: 35px;
-  padding: 10px 20px;
+  
   justify-content: center;
   align-items: center;
   gap: 20px;
@@ -91,4 +102,10 @@
   border: 2px solid var(--gold);
   background: #E4A135;
   cursor: pointer;
+
+
+  position: relative;
+  top: 17px;
+  
+
 }
