--- a/app/(pages)/_components/ExpandedAlumniCard/ExpandedAlumniCard.module.scss
+++ b/app/(pages)/_components/ExpandedAlumniCard/ExpandedAlumniCard.module.scss
@@ -76,7 +76,7 @@
   .socialContainer {
     display: flex;
     align-items: center;
-    gap: 17px;
+    gap: 11px;
 
     
   }
